--- a/burger-queen-project/package.json
+++ b/burger-queen-project/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start:api": "json-server --watch db.json --port 3001",
+    "start:api": "json-server --watch db.json --port 3001 -m ./node_modules/json-server-auth",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "json-server": "^0.17.3",
+    "json-server-auth": "^2.1.0",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
