--- a/burger-queen-project/package.json
+++ b/burger-queen-project/package.json
@@ -10,9 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
     "json-server": "^0.17.3",
     "json-server-auth": "^2.1.0",
     "next": "13.3.0",
@@ -20,5 +17,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.14",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0"
   }
 }
